# bitlbee-steam

./: .travis.yml  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  travis.sh
.travis/: obs.sh
debian/: changelog  control  copyright
doc/: Makefile.am
steam/: Makefile.am  json.h  steam-api.c  steam-api.h  steam-auth.c  steam-auth.h  steam-crypt.c  steam-crypt.h  steam-friend.c  steam-friend.h  steam-glib.c  steam-glib.h  steam-http.c  steam-http.h  steam-id.h  steam-json.c  steam-json.h  steam-user.c  steam-user.h  steam-util.c  steam-util.h  steam.c  steam.h
